# rust-agent-sdk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: codeql-analysis.yml  rust.yml
src/: README.md  client.rs  connection.rs  consts.rs  csdsclient.rs  external_services.rs  frame.rs  lib.rs  request.rs  sdk.rs  structs.rs  transport.rs  utils.rs
src/shared/structs/: baseuri.rs  config.rs  config_struct.rs
