[package]
authors = ["Maxim <astralfestival@gmail.com>"]
description = "Liveperson Agent Messaging SDK for Rust"
edition = "2018"
keywords = ["agent", "sdk", "liveperson", "bot", "messaging"]
license = "MIT"
name = "rust-agent-sdk"
version = "1.0.2"

[dependencies]
lru = "0.6"
mio-extras = "2.0"
reqwest = {version = "0.10", features = ["blocking", "json"]}
serde = "1.0"
url = "2.1"
ws = "0.9"
