[package]
authors = ["Maxim <astralfestival@gmail.com>"]
description = "Liveperson Agent Messaging SDK for Rust"
edition = "2018"
keywords = ["agent", "sdk", "liveperson", "bot", "messaging"]
license = "MIT"
name = "rust-agent-sdk"
version = "0.0.1"

[dependencies]
bytes = "0.5.6"
futures = "0.3.5"
hyper = "0.13.8"
hyper-tls = "0.4.3"
lru = "0.6.0"
mio-extras = "2.0.6"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.57"
tokio = {version = "0.2.22", features = ["full"]}
url = "2.1.1"
ws = "0.9.1"
